--- a/Osnova.Net/Osnova.Net.csproj
+++ b/Osnova.Net/Osnova.Net.csproj
@@ -8,7 +8,7 @@
     <AssemblyVersion>1.0.0.154</AssemblyVersion>
     <FileVersion>1.0.0.154</FileVersion>
     <Platforms>AnyCPU;x64</Platforms>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug;Release;LocalTests</Configurations>
     <PackageIcon>icon.png</PackageIcon>
     <Authors>Gigas002</Authors>
     <Company>Gigas002</Company>
