--- a/Osnova.Net.Tests/Osnova.Net.Tests.csproj
+++ b/Osnova.Net.Tests/Osnova.Net.Tests.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
     <VersionPrefix>1.0.0</VersionPrefix>
     <VersionSuffix>ci101</VersionSuffix>
-    <AssemblyVersion>1.0.0.172</AssemblyVersion>
-    <FileVersion>1.0.0.172</FileVersion>
+    <AssemblyVersion>1.0.0.174</AssemblyVersion>
+    <FileVersion>1.0.0.174</FileVersion>
     <Platforms>AnyCPU;x64</Platforms>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug;Release;LocalTests</Configurations>
     <PackageIcon>icon.png</PackageIcon>
     <Authors>Gigas002</Authors>
     <Company>Gigas002</Company>
